Fix alignment

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -83,6 +83,11 @@ variant-list .quantity__button {
   position: relative;
 }
 
+.variant-item__price .price,
+.variant-item__totals .price {
+  display: block;
+}
+
 .variant-list__table *.right {
   text-align: right;
 }
@@ -479,8 +484,13 @@ variant-list-remove-button:hover .icon-remove {
   }
 
   .variant-list__table td {
-    vertical-align: middle;
     padding-top: 1.6rem;
+    vertical-align: middle;
+  }
+
+  .variant-list__table .variant-item--unit-price td {
+    vertical-align: top;
+
   }
 
   .variant-item {
